--- a/LanternServer/LanternServer.csproj
+++ b/LanternServer/LanternServer.csproj
@@ -23,6 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
         <PackageReference Include="EasyHotReload" Version="1.0.0"/>
         <PackageReference Include="JetBrains.Annotations" Version="2023.3.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
