--- a/LanternServer/LanternServer.csproj
+++ b/LanternServer/LanternServer.csproj
@@ -20,14 +20,21 @@
         <PackageReference Include="Bunkum" Version="4.3.3"/>
         <PackageReference Include="Bunkum.Listener" Version="4.3.3" />
         <PackageReference Include="Bunkum.Protocols.Http" Version="4.3.3"/>
+        <PackageReference Include="NPTicket" Version="3.1.0" />
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
+        <PackageReference Include="Bunkum.RealmDatabase" Version="4.3.3" />
         <PackageReference Include="EasyHotReload" Version="1.0.0"/>
         <PackageReference Include="JetBrains.Annotations" Version="2023.3.0"/>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
         <PackageReference Include="NotEnoughLogs" Version="2.0.3"/>
+
+
     </ItemGroup>
+
+
+
 
 </Project>
